# crab.fit

api/: Cargo.toml  Dockerfile  README.md
api/adaptors/memory/: Cargo.toml
api/adaptors/sql/: Cargo.toml
api/adaptors/sql/src/: lib.rs
api/adaptors/sql/src/migration/: m01_setup_tables.rs
api/common/: Cargo.toml
api/src/: adaptors.rs  governor.rs  main.rs
api/src/routes/: event.rs  person.rs  tasks.rs
frontend/: .env.local  Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/public/: robots.txt  sitemap.xml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/[id]/: EventAvailabilities.tsx  layout.tsx  page.tsx
frontend/src/app/how-to/: page.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/components/AvailabilityEditor/: AvailabilityEditor.tsx
frontend/src/components/AvailabilityViewer/: AvailabilityViewer.tsx
frontend/src/components/Button/: Button.tsx
frontend/src/components/CalendarField/components/Month/: Month.tsx
frontend/src/components/CalendarField/components/Weekdays/: Weekdays.tsx
frontend/src/components/CreateForm/components/EventInfo/: EventInfo.tsx
frontend/src/components/Footer/: Footer.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/components/Settings/: Settings.tsx
frontend/src/config/: api.ts
frontend/src/i18n/: client.ts  server.ts
frontend/src/i18n/locales/en-GB/: home.json
frontend/src/utils/: calculateColumns.ts  calculateRows.ts  makeClass.ts
