[package]
name = "crabfit-api"
description = "API for Crab Fit"
license = "GPL-3.0-only"
version = "3.0.0"
edition = "2021"

[features]
sql-adaptor = []

[workspace]
members = ["common", "adaptors/*"]

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "signal"] }
common = { path = "common" }
sql-adaptor = { path = "adaptors/sql" }
memory-adaptor = { path = "adaptors/memory" }
dotenvy = "0.15.7"
serde_json = "1.0.149"
rand = "0.10.0"
punycode = "0.4.1"
regex = "1.12.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
chrono = "0.4.43"
bcrypt = "0.18.0"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tower_governor = { version = "0.8.0", features = ["axum"] }
tower = "0.5.3"
utoipa = { version = "5.4.0", features = ["axum_extras", "preserve_order"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "debug-embed"] }
base64 = "0.22.1"
real = { version = "0.1.4", features = ["axum"] }
